--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
   </properties>
   <dependencies>
     <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>1.5.1</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava-testlib</artifactId>
       <version>19.0</version>
